// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductTileOptions /> renders ProductTileOptions 1`] = `
<div
  className="mfui-product-tile-options"
>
  <div
    className="mfui-product-tile-options__wrapper"
  >
    <div
      className="mfui-product-tile-options__option"
      key="Безлимитные SMS0"
    >
      <div
        className="mfui-product-tile-options__icon"
      >
        <test-file-stub />
      </div>
      <div
        className="mfui-product-tile-options__content"
      >
        <div
          className="mfui-product-tile-options__title"
        >
          Безлимитные SMS
        </div>
        <div
          className="mfui-product-tile-options__description"
        >
          55 ₽ за 30 дней
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProductTileOptions /> renders ProductTileOptions with caption 1`] = `
<div
  className="mfui-product-tile-options"
>
  <div
    className="mfui-product-tile-options__wrapper"
  >
    <div
      className="mfui-product-tile-options__option"
      key="МегаФон ТВ0"
    >
      <div
        className="mfui-product-tile-options__icon"
      >
        <test-file-stub />
      </div>
      <div
        className="mfui-product-tile-options__content"
      >
        <div
          className="mfui-product-tile-options__title"
        >
          МегаФон ТВ
        </div>
        <div
          className="mfui-product-tile-options__description"
        >
          Особый статус и привилегии
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProductTileOptions /> renders ProductTileOptions with footnote 1`] = `
<div
  className="mfui-product-tile-options"
>
  <div
    className="mfui-product-tile-options__wrapper"
  >
    <div
      className="mfui-product-tile-options__option"
      key="Кэшбэк 20 %0"
    >
      <div
        className="mfui-product-tile-options__icon"
      >
        <test-file-stub />
      </div>
      <div
        className="mfui-product-tile-options__title"
      >
        Кэшбэк 20 %
        <BubbleHint
          className="mfui-product-tile-options__cashback-c"
          click={true}
          placement="bottom"
          popupAlign="left"
          popupPadding="normal"
          popupWidth="small"
          trigger={
            <span
              className="mfui-product-tile-options__bubble-trigger"
            >
              Подробнее
            </span>
          }
        >
          <div
            className="mfui-product-tile-options__hint-text"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Участвуйте в программе и тратьте кэшбэк",
              }
            }
          />
        </BubbleHint>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProductTileOptions /> renders ProductTileOptions with head 1`] = `
<div
  className="mfui-product-tile-options"
>
  <div
    className="mfui-product-tile-options__head"
  >
    Дополнительные возможности:
  </div>
  <div
    className="mfui-product-tile-options__wrapper"
  >
    <div
      className="mfui-product-tile-options__option"
      key="Безлимитные SMS0"
    >
      <div
        className="mfui-product-tile-options__icon"
      >
        <test-file-stub />
      </div>
      <div
        className="mfui-product-tile-options__content"
      >
        <div
          className="mfui-product-tile-options__title"
        >
          Безлимитные SMS
        </div>
        <div
          className="mfui-product-tile-options__description"
        >
          55 ₽ за 30 дней
        </div>
      </div>
    </div>
  </div>
</div>
`;
